# ractor

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  db.sqlite3
db/: create.sql
protos/: global.proto  scenes.proto
src/: actor.rs  configs.rs  errors.rs  main.rs  protos.rs
src/actors/: mod.rs  network.rs  scene.rs
src/models/: scenes.rs
src/protos/: mod.rs  scenes.rs
src/query/: scenes.rs
