[package]
name = "ractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.37.0", features = ["full"] }
async-trait = "0.1.79"
bytes = "1.6.0"
prost = "0.12.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "sqlite", "macros" ] }

[build-dependencies]
prost-build = "0.12.4"
